# hn-summary-and-translate

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  PRD.md  README.md  WORKFLOW.md  config.yaml  config_test.yaml  index.html  main.py  pyproject.toml  requirements.txt  robots.txt  rss-en.xml  rss-ja.xml  rss-ko.xml  rss-zh.xml  setup.sh  sitemap.xml
.claude/: settings.local.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  update-rss.yml
output/: robots.txt  rss-style.xsl
src/: __init__.py  fetcher.py  generator.py  hn_comments.py  scraper.py  summarizer.py  translator.py  utils.py
src/templates/: rss-style.xsl
tests/: __init__.py  test_fetcher.py  test_generator.py  test_scraper.py
