[project]
name = "hn-rss-translator"
version = "1.0.0"
description = "Automatically summarize and translate Hacker News RSS feeds"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "HN RSS Translator Contributors"}
]
keywords = ["hacker-news", "rss", "translation", "summarization", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "feedparser>=6.0.11",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "lxml>=5.0.0",
    "deep-translator==1.11.4",
    "transformers==4.35.2",
    "torch>=2.0.0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
